updated to reflect filename entry

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Cube is a markov chain generating text bot
+
+
 Cube requires a file for settings:
 
 config.conf
@@ -6,3 +9,4 @@ jid: cube@server.com
 password: p@ssword123
 server: chatroom@server.com
 nick: cube
+textFileName: text.txt
